[fix]: Auth middleware
